objects/UserSwitcherLog__c.object
<CustomObject>
    <description>Logging object to handle transitioning users, used by the User Switcher utility bar component.</description>
    <fields>
        <fullName>LoginDateTime__c</fullName>
        <description>The date and time the login happened.</description>
        <inlineHelpText>The date and time the login happened.</inlineHelpText>
        <label>Login DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginStatus__c</fullName>
        <description>The status of the login.  Complete means the user was logged in.  Pending means the user will be logged in - this is a temporary state.</description>
        <inlineHelpText>The status of the login.  Complete means the user was logged in.  Pending means the user will be logged in - this is a temporary state.</inlineHelpText>
        <label>Login Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original system admin that will be demoing with the demoPersonas app</description>
        <label>Original User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Switcher_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is doing the action, this is generally the user who originally logged into the org.</description>
        <inlineHelpText>The user who is doing the action, this is generally the user who originally logged into the org.</inlineHelpText>
        <label>Source User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserSwitcherLogs_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user being logged in as.</description>
        <inlineHelpText>The user being logged in as.</inlineHelpText>
        <label>Target User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserSwitcherLogs_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Switcher Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SourceUser__c</columns>
        <columns>TargetUser__c</columns>
        <columns>LoginDateTime__c</columns>
        <columns>LoginStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>USL-{000000}</displayFormat>
        <label>Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Switcher Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>